2001-10-09  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-dav-server.c (parent_exists): don't call
	__uri_exists as __is_collection should check this.

2001-10-06  Alex Graveley  <alex@ximian.com>

	* configure.in (enable_nss): Explicitly add libplc4 and libplds4
	which are dependencies of libnspr4.

	* src/libsoup/Makefile.am (libsoup_la_LIBADD): Link with NSS libs.
	(libsoup_la_SOURCES): Add soup-nss.[ch].

	* src/libsoup/soup-nss.c: Added. GIOChannel wrapper for Mozills NSS.

	* src/libsoup/soup-ssl.c: Use NSS if available to avoid out of
	process SSL proxy.

	* src/soup-ssl-proxy/Makefile.am (soup_ssl_proxy_SOURCES): Remove
	soup-nss.[ch].
	(soup_ssl_proxy_LDADD): Do not link NSS libs, as these are now
	linked directly into libsoup.

2001-10-05  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (soup_message_clear_headers):
	Impl. Use instead of custom header free funcs throughout.
	(soup_message_foreach_header): Impl.
	(global_handlers): Handle redirects before authenticating.
	(redirect_handler): Use soup_message_get_header.
	(run_handler): Ditto.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-socket-unix.c (soup_address_new_cb): Ugg. Don't
	call waitpid with NOHANG. Avoid zombies. Gain friends.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-message.c (authorize_handler): Call
	soup_message_get_header_list.

	* src/libsoup/soup-auth.c (soup_auth_new_from_header_list): Set
	crypto strength for authentication types, and try to choose the
	strongest when authenticating.

	* src/libsoup/soup-queue.c (soup_check_used_headers): Kill warnings.

	* tests/simple-test.c (list_headers): Handle multiple values for
	header.

	* tests/handler-test.c (list_headers): Ditto.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-server.c (read_headers_cb): Fix const warnings.

2001-10-04  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-server.c (read_headers_cb): Don't create